--- a/css/style.css
+++ b/css/style.css
@@ -340,7 +340,7 @@ body::after {
 	background-color: #ffffff;
 	color: #000000;
 }
-.user-block .login:hover .link-modal-in .modal-in {
+.link-modal:hover .modal-in {
 	display: block;
 }
 /*-- /ВХОД ИКОНКА--*/
@@ -371,6 +371,9 @@ body::after {
 	width: 21px;
 	height: 19px;
 	background: transparent url("../img/basket_full.png") no-repeat;
+}
+.link-modal-basket:hover .order-in-basket {
+	display: block;
 }/*
 .user-block	.basket-bye-ice:hover::after {
 	background: transparent url("../img/basket_full.png") no-repeat;
@@ -1865,7 +1868,7 @@ body > input[type="radio"] {
 	width: 277px;
 	height: 214px;
 	background: #f8f7f4;
-	box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+	box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.4);
 	font-size: 14px;
 	line-height: 24px;
 	color: #999999;
