--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ body::after {
 }
 .main-navigation {
 	float: left;
-	width: 660px;
+	width: 500px;
 	min-height: 64px;
 	margin-top: 9px;
 	margin-bottom: 6px;
@@ -99,7 +99,7 @@ body::after {
 	border-radius: 16px;
 	border-bottom: none;
 }
-.main-nav  > li a:hover {
+.main-nav  li a:hover {
 	color: #000000;
 	background-color: #ffffff;
 	border-radius: 20px;
@@ -193,7 +193,10 @@ body::after {
 	border: none;
 	border: 1px solid #d1d0ce;
 }
-
+.main-nav > .sub-menu-catalog a:active {
+	background-color: none;
+	border-radius: none;
+}
 .main-nav  .sub-menu-catalog  li:last-child a {
 	/*padding-top: 5px;
 	padding-bottom: 12px;*/
@@ -319,10 +322,11 @@ body::after {
 .user-block .search:hover::after {
 	background: #ffffff url("../img/search_black.png") no-repeat;
 	background-position: center;
-}
+}/*
 .user-block .search:hover .modal-search {
 	display: block;
-}/*-- /ПОИСК ИКОНКА--*/
+}*/
+/*-- /ПОИСК ИКОНКА--*/
 	/*-- ВХОД ИКОНКА--*/
 .user-block .login::after {
 	content: "";
@@ -339,10 +343,10 @@ body::after {
 .user-block .login:hover {
 	background-color: #ffffff;
 	color: #000000;
-}
+}/*
 .link-modal:hover .modal-in {
 	display: block;
-}
+}*/
 /*-- /ВХОД ИКОНКА--*/
 
 	/*-- КОРЗИНА ИКОНКА--*/
@@ -371,23 +375,16 @@ body::after {
 	width: 21px;
 	height: 19px;
 	background: transparent url("../img/basket_full.png") no-repeat;
-}
+}/*
 .link-modal-basket:hover .order-in-basket {
 	display: block;
-}/*
-.user-block	.basket-bye-ice:hover::after {
-	background: transparent url("../img/basket_full.png") no-repeat;
-}*/
-/*.user-block .basket-bye-ice:hover {
-	background-color: #ffffff;
-	border-radius: 16px;
-	color: #000000;
 }*/
 /*-- /КОРЗИНА ИКОНКА--*/
 
 	/*-- ВРЕМЯ --*/
 .timework-tel {
-	float: right;
+	position: absolute;
+	right: 0;
 	margin-top: -9px;
 	width: 175px;
 	text-align: right;
@@ -1959,13 +1956,7 @@ body > input[type="radio"] {
 	font-weight: 400;
 	font-family: "Roboto", "Tahoma", sans-serif;
 }/*-- /ОКНО ВХОДА --*/
-/*
-.modal-in .login::after {
-	display: none;
-}
-.modal-in .login {
-	padding: 0;
-}*/
+
 	/*-- ФОРМА ОБРАТНОЙ СВЯЗИ--*/
 .modal-feedback	{
 	position: absolute;
@@ -2124,7 +2115,7 @@ body > input[type="radio"] {
 	padding-right: 14px;
 	display: none;
 	background: #f8f7f4;
-	box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+	box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.4);
 	font-size: 13px;
 	line-height: 16px;
 	color: #999999;
@@ -2223,6 +2214,7 @@ body > input[type="radio"] {
 	font-weight: 700;
 	font-family: "Roboto", "Tahoma", sans-serif;
 }
+	
 	/*-- КАРТА --*/
 .modal-map {
 	position: fixed;
