--- a/css/style.css
+++ b/css/style.css
@@ -1487,16 +1487,23 @@ body > input[type="radio"] {
 	text-align: center;
 	/*border-radius: 15px;*/
 }
-.goods .cost {
+.ice-cost-catalog {
 	position: relative;
-	bottom: 64px;
+    height: 357px;
+}
+.goods .cost {
+	/*position: relative;*/
+	position: absolute;
+	/*bottom: 64px;*/
+	bottom: 98px;
+	left: 13px;
 	text-align: left;
-	display: inline-block;
-	vertical-align: top;
+	/*display: inline-block;
+	vertical-align: top;*/
 	/*float: left;
 	width: 154px;
 	height: 45px;*/
-	margin-right: 113px;
+	/*margin-right: 113px;*/
 	font-size: 45px;
 	line-height: 45px;
 	color: #ffffff;
@@ -1516,39 +1523,44 @@ body > input[type="radio"] {
 	cursor: pointer;
 }
 .goods .specification {
-	position: relative;
+	/*position: relative;*/
 	/*top: -43px;*/
-	margin: 0;
-	bottom: 43px;
-    padding-left: 13px;
-    padding-right: 12px;
+	/*margin: 0;
+	bottom: 43px;*/
+	display: block;
+    padding-left: 18px;
+    padding-right: 18px;
 	/*bottom: 37px;*/
+	margin-bottom: 15px;
+    margin-top: 6px;
+	text-align: center;
 	font-size: 16px;
 	line-height: 22px;
 	color: #ffffff;
 	font-weight: 500;
 	font-family: "Roboto", "Tahoma", sans-serif;
-	text-align: center;
 	text-decoration: underline;
 }
 .case-catalog .btn-hover-shadow {
 	position: absolute;
 	width: 293px;
-	height: 32px;
+	/*height: 32px;*/
+	height: 42px;
 	/*height: 30px;*/
 	background-color: rgba(167, 184,173, 0.3);
 	/*border-radius: 15px;*/
 	border-bottom-right-radius: 7px;
 	border-bottom-left-radius: 7px;
 	display: none;
+	z-index: 12;
 }
 .case-catalog .btn-show-catalog {
 	position: relative;
-    top: -25px;
+    top: -14px;
 	/*left: 46px;
 	bottom: -250px;*/
 	width: 168px;
-	margin: 0 46px;
+	/*margin: 0 46px;*/
 	padding: 10px 16px;
 	text-align: center;
 	font-size: 18px;
@@ -1598,7 +1610,7 @@ body > input[type="radio"] {
 .goods .catalog-pages {
 	float: right;
 	/*margin-bottom: 50px;*/
-	margin-top: 39px;
+	margin-top: 46px;
 }
 .pages-ices {
 	margin: 0;
@@ -1654,7 +1666,7 @@ body > input[type="radio"] {
 	/*margin-top: 36px;*/
 	text-align: left;
 	/*font-size: 0;*/
-	margin-top: 15px;
+	margin-top: 18px;
 	
 }
 .footer-social a {
